--- a/revenues-test/stylesheets/main.css
+++ b/revenues-test/stylesheets/main.css
@@ -7,6 +7,13 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+@font-face {
+      font-family: 'mm_font';
+      src: url('../fonts/myanmarcensus.woff2') format('woff2'),
+        url('../fonts/myanmarcensus.woff') format('woff'),
+        url('../fonts/myanmarcensus.ttf') format('truetype');
+  } 
+
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -3509,4 +3516,12 @@
   padding-top: 0px;
   margin-bottom: 0.5em;
 /*  margin-left: 0.5em;*/
+}
+
+
+
+
+
+.mm {
+  font-family: 'mm_font', Fallback, sans-serif;
 }
